# riscv64-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: index.html  main.js  worker.js
firmware/: virt.dtb  virt.dts
src/: cpu.rs  decode.rs  decoder.rs  devices.rs  f_register.rs  formats.rs  instruction.rs  lib.rs  main.rs  mmu.rs  opcode.rs  register.rs  trap.rs  web.rs
src/cpu/: bus.rs  csr.rs  decoder_cache.rs  execute.rs  f_register.rs  memory.rs  register.rs
src/cpu/execute/: csr_execute.rs  fp.rs  helper.rs  (+7 more)
src/decode/: c_formats.rs  compressed.rs  f_formats.rs  formats.rs  rv32_64.rs  rv64f.rs  rv64fd.rs
src/devices/: clint.rs  plic.rs  uart.rs  virtio.rs
src/mmu/: access_type.rs  address.rs  pte.rs  satp.rs  tlb.rs  translation.rs  walker.rs
tests/: address_test.rs  csr_tests.rs  decoder_test.rs  execute_test.rs  interrupt_test.rs  medeleg_test.rs  pte_test.rs  ret_test.rs  satp_test.rs  trap_delegation_test.rs  walker_test.rs
tests/common/: elf_loader.rs  elf_runner.rs  mod.rs
tests/riscv-tests/: hypervisor-p-2-stage_translation  hypervisor-p-2-stage_translation_implicit_load_error  hypervisor-p-2-stage_translation_implicit_load_error.dump  hypervisor-p-2-stage_translation_implicit_load_error_hs  hypervisor-p-2-stage_translation_implicit_load_error_hs.dump  hypervisor-svadu-p-2-stage_translation_implicit_store_error  hypervisor-svadu-p-2-stage_translation_implicit_store_error.dump  hypervisor-svadu-p-2-stage_translation_implicit_store_error_hs  hypervisor-svadu-p-2-stage_translation_implicit_store_error_hs.dump  ld_st.asm
(+20 files in other folders)
