[package]
name = "glasshart-emulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
elf = "0.8.0"
softfloat-wrapper = "0.3.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"

[patch.crates-io]
softfloat-sys = { git = "https://github.com/kaushald4/softfloat-sys" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
